--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 <html lang="en-us">
   <head>
-    <title>Galactic Empire Deathstar Monitor</title>
+    <title>Become the Dev Star</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=yes,width=device-width,initial-scale=1.0,maximum-scale=5.0" />
     <link rel="icon" href="css/images/favicon.ico" type="image/x-icon" />
